Bug 1649579 - [GTK] Do not clear clipboard data on exit; r=stransky

Bug 311340 tried to fix a similar issue, but have to clear clipboard in nsClipboard's
destructor in order to avoid crash while calling gdk_display_close() on exit,
see bug 531580. But after bug 1626536, we are no longer calling gdk_display_close()
on exit, I don't see the same crash as bug 531580 anymore, either.

Differential Revision: https://phabricator.services.mozilla.com/D187595